# tokenizer

./: .gitignore  CMakeLists.txt  Makefile  README.md  git_logger
include/: get_token.h  i_expression.h  i_power.h  i_primary.h  i_term.h  token.h  token_stream.h  utilities.h
src/: get_token.cpp  i_expression.cpp  i_power.cpp  i_primary.cpp  i_term.cpp  main.cpp  token.cpp  token_stream.cpp  utilities.cpp
tests/: tests.cpp
